--- a/minisat.opam
+++ b/minisat.opam
@@ -19,7 +19,7 @@ depends: [
   "logs"
   "base"
   "stdio"
-  "dimacs" {with-test}
+  "dimacs"
   "ppx_inline_test" {with-test}
   "ppx_assert" {with-test}
   "odoc" {with-doc}
