--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "test/dimacs"]
-	path = test/dimacs
+[submodule "lib/dimacs"]
+	path = lib/dimacs
 	url = https://github.com/Halbaroth/dimacs.git
