--- a/lib/dune
+++ b/lib/dune
@@ -1,6 +1,7 @@
 (library
  (name minisat)
  (libraries dimacs logs fmt cmdliner)
+ (private_modules solver)
  (preprocess
    (pps ppx_compare ppx_deriving.show ppx_sexp_conv)))
 
