--- a/lib/dune
+++ b/lib/dune
@@ -1,7 +1,6 @@
 (library
  (name minisat)
- (libraries dimacs logs fmt cmdliner)
- (private_modules solver)
+ (libraries dimacs logs fmt cmdliner unix)
  (preprocess
    (pps ppx_compare ppx_deriving.show ppx_sexp_conv)))
 
